--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,7 +61,7 @@ nav .nav-bar .logo {
   border-bottom: 5px solid #78D7DE;
   width: 100%;
   height: 500px;
-  background-image: url("http://cuphzhw.cluster029.hosting.ovh.net/public/img/background-min.png");
+  background-image: url("C:/Users/Tony/Desktop/Projets/Kiddy Company/public/img/background1-min.webp");
   background-position: center;
   background-size: cover;
   background-position-y: center;
@@ -85,7 +85,7 @@ nav .nav-bar .logo {
   box-shadow: inset 0px 10px 13px 5px rgba(0, 0, 0, 0.13);
   width: 100%;
   height: 500px;
-  background-image: url("http://drakary.cluster030.hosting.ovh.net/public/img/pexels-lina-kivaka-1741231.jpg");
+  background-image: url("C:/Users/Tony/Desktop/Projets/Kiddy Company/public/img/background2.webp");
   background-position: center;
   background-size: cover;
   background-position-y: center;
@@ -105,11 +105,119 @@ nav .nav-bar .logo {
   font-size: 30px;
 }
 
+.profil {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.profil img {
+  object-fit: cover;
+  width: 100%;
+  height: 350px;
+}
+.profil h2 {
+  margin: auto;
+  padding: 10px;
+  font-family: "Montserrat";
+  border-bottom: 4px solid #F29898;
+}
+.profil .profilContainer {
+  width: 100%;
+  margin: 35px 0;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.profil .profilContainer .profilCard {
+  width: 20%;
+  box-shadow: 1px 10px 18px 0px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+  border-radius: 25px;
+  padding-bottom: 25px;
+  display: flex;
+  flex-direction: column;
+}
+.profil .profilContainer .profilCard a {
+  padding: 15px;
+  background-color: #78D7DE;
+  font-family: "Montserrat";
+  text-decoration: none;
+  color: white;
+  margin-top: 20px;
+  font-size: 20px;
+  transition-duration: 0.4s;
+}
+.profil .profilContainer .profilCard a:hover {
+  background-color: #F29898;
+  transition-duration: 0.4s;
+}
+.profil .profilContainer .profilCard img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+.profil .profilContainer .profilCard .profilContent {
+  margin: 5px 15px;
+  font-family: "Montserrat";
+  height: 250px;
+}
+.profil .profilContainer .profilCard .profilContent h3 {
+  display: flex;
+  align-items: center;
+}
+.profil .profilContainer .profilCard .profilContent h3 i {
+  margin-left: 5px;
+}
+.profil .profilContainer .profilCard .profilContent p {
+  margin: 10px;
+}
+.profil .profilContainer .profilCard .profilPrix {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  margin-left: 15px;
+  margin-top: 15px;
+  font-family: "Montserrat";
+  align-items: center;
+}
+.profil .profilContainer .profilCard .profilPrix p:nth-child(2) {
+  font-weight: bold;
+}
+.profil .profilContainer .profilCard .profilNote {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  margin-left: 15px;
+  margin-top: 5px;
+  font-family: "Montserrat";
+  align-items: center;
+}
+.profil .profilContainer .profilCard .profilNote p:nth-child(2) {
+  font-weight: bold;
+}
+.profil .profilContainer .profilCard .profilLocalisation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  margin-left: 15px;
+  margin-top: 5px;
+  font-family: "Montserrat";
+  align-items: center;
+}
+.profil .profilContainer .profilCard .profilLocalisation p:nth-child(2) {
+  font-weight: bold;
+}
+
 .avis {
   width: 100%;
 }
 .avis .avisContainer {
-  width: 100%;
+  width: 80%;
+  margin: auto;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -139,17 +247,19 @@ nav .nav-bar .logo {
   margin-top: 10px;
   color: rgba(0, 0, 0, 0.7);
 }
-.avis .avisContainer .avisContainerCard .description .liner {
+.avis .avisContainer .avisContainerCard .stars {
+  color: #e9c46a;
+  margin-top: 10px;
+  margin-left: 10px;
+  padding: 8px;
+}
+.liner {
   margin: 2px 5px;
   height: 6px;
   width: 60px;
   background-color: #F29898;
 }
-.avis .avisContainer .avisContainerCard .stars {
-  color: #e9c46a;
-  margin-top: 10px;
-  padding: 8px;
-}
+
 .buttonContainer {
   width: 100%;
   display: flex;
@@ -157,7 +267,7 @@ nav .nav-bar .logo {
   align-items: center;
   margin-top: 40px;
 }
-.buttonContainer button {
+.buttonContainer a {
   color: #FFEDB2;
   font-family: "Montserrat";
   background-color: #F29898;
@@ -166,8 +276,9 @@ nav .nav-bar .logo {
   border: 2px solid transparent;
   border-radius: 15px;
   transition-duration: 0.5s;
+  text-decoration: none;
 }
-.buttonContainer button:hover {
+.buttonContainer a:hover {
   border: 2px solid transparent;
   border-bottom: 2px solid #78D7DE;
   border-top: 2px solid rgba(0, 0, 0, 0.1);
@@ -208,6 +319,7 @@ footer .containerFooter .footerRedirect:hover i {
 }
 footer .containerFooter .footerRedirect:hover {
   cursor: pointer;
+  color: white;
 }
 footer .containerFooter .contact {
   display: flex;
