--- a/sass/main.scss
+++ b/sass/main.scss
@@ -76,7 +76,7 @@ nav {
     border-bottom: 5px solid $primary-color;
     width: 100%;
     height: 500px;
-    background-image: url('http://cuphzhw.cluster029.hosting.ovh.net/public/img/background-min.png');
+    background-image: url('C:/Users/Tony/Desktop/Projets/Kiddy Company/public/img/background1-min.webp');
     background-position: center;
     background-size: cover;
     background-position-y: center;
@@ -102,7 +102,7 @@ nav {
     box-shadow: inset 0px 10px 13px 5px rgba(0,0,0,0.13);
     width: 100%;
     height: 500px;
-    background-image: url('http://drakary.cluster030.hosting.ovh.net/public/img/pexels-lina-kivaka-1741231.jpg');
+    background-image: url('C:/Users/Tony/Desktop/Projets/Kiddy Company/public/img/background2.webp');
     background-position: center;
     background-size: cover;
     background-position-y: center;
@@ -124,10 +124,126 @@ nav {
         font-size: 30px;
     }
 }
+.profil {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    img {
+        object-fit: cover;
+        width: 100%;
+        height: 350px;
+    }
+    h2 {
+        margin: auto;
+        padding: 10px;
+        font-family: $main-police;
+        border-bottom: 4px solid $secondary-color;
+    }
+    .profilContainer {
+        width: 100%;
+        margin: 35px 0;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-around;
+        .profilCard {
+            width: 20%;
+            box-shadow: $middleshadowing;
+            overflow: hidden;
+            border-radius: 25px;
+            padding-bottom: 25px;
+            display: flex;
+            flex-direction: column;
+            a {
+                padding: 15px;
+                background-color: $primary-color;
+                font-family: $main-police;
+                text-decoration: none;
+                color: white;
+                margin-top: 20px;
+                font-size: 20px;
+                transition-duration: 0.4s;
+                &:hover {
+                    background-color: $secondary-color;
+                    transition-duration: 0.4s;
+                }
+            }
+            img {
+                width: 100%;
+                height: 200px;
+                object-fit: cover;
+            }
+            .profilContent {
+                margin: 5px 15px;
+                font-family: $main-police;
+                height: 250px;
+                h3 {
+                    display: flex;
+                    align-items: center;
+                    i {
+                        margin-left: 5px;
+                    }
+                }
+                p {
+                    margin: 10px;
+                }
+            }
+            .profilPrix {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                width: 90%;
+                margin-left: 15px;
+                margin-top: 15px;
+                font-family: $main-police;
+                align-items: center;
+                p {
+                    
+                    &:nth-child(2) {
+                        font-weight: bold;
+                    }
+                }
+            }
+            .profilNote {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                width: 90%;
+                margin-left: 15px;
+                margin-top: 5px;
+                font-family: $main-police;
+                align-items: center;
+                p {
+                    
+                    &:nth-child(2) {
+                        font-weight: bold;
+                    }
+                }
+            }
+            .profilLocalisation {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                width: 90%;
+                margin-left: 15px;
+                margin-top: 5px;
+                font-family: $main-police;
+                align-items: center;
+                p {
+                    
+                    &:nth-child(2) {
+                        font-weight: bold;
+                    }
+                }
+            }
+        }
+    }
+}
 .avis {
     width: 100%;
     .avisContainer {
-        width: 100%;
+        width: 80%;
+        margin: auto;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
@@ -154,16 +270,11 @@ nav {
                     margin-top: 10px;
                     color: rgba(0,0,0,0.7);
                 }
-                .liner {
-                    margin: 2px 5px;
-                    height: 6px;
-                    width: 60px;
-                    background-color: $secondary-color;
-                }
             }
             .stars {
                 color: #e9c46a;
                 margin-top: 10px;
+                margin-left: 10px;
                 padding: 8px;
                 i {
 
@@ -172,13 +283,21 @@ nav {
         }
     }
 }
+
+.liner {
+    margin: 2px 5px;
+    height: 6px;
+    width: 60px;
+    background-color: $secondary-color;
+}
+
 .buttonContainer {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 40px;
-    button {
+    a {
         color: #FFEDB2;
         font-family: $main-police;
         background-color: $secondary-color;
@@ -187,6 +306,7 @@ nav {
         border: 2px solid transparent;
         border-radius: 15px;
         transition-duration: 0.5s;
+        text-decoration: none;
         &:hover {
             border: 2px solid transparent;
             border-bottom: 2px solid $primary-color;
@@ -227,6 +347,7 @@ footer {
             }
             &:hover {
                 cursor: pointer;
+                color: white;
             }
         }
         .contact {
